# challenges

./: README
brainfuck/: Brainfuck.hs  Machine.hs  Memory.hs  README  README.md  Zipper.hs  brainfuck.cabal
brainfuck/Brainfuck/: Optimizer.hs  Parser.hs
brainfuck/Memory/: Classic.hs  Infinite.hs  Infinity.hs  Sequence.hs  Sparse.hs  Tape.hs
brainfuck/examples/: bf.bf  hello.bf  repeat.bf  rot13.bf  sqaures.bf  toUpper.bf
hs2bf/: hs2bf.hs
projecteuler.net/: Problems.hs  Run.hs
projecteuler.net/Euler/: One.lhs  Problem01.lhs  Problem02.lhs  Problem03.lhs  Problem04.lhs  Problem05.lhs  Problem06.lhs  Problem07.lhs  Problem08.lhs  Problem09.lhs  Problem10.lhs  Problem11.lhs  Problem12.lhs  Problem13.lhs  Problem14.lhs  Problem16.lhs  Problem20.lhs  Problem21.lhs  Problem22.lhs  Problem24.lhs  Problem25.lhs  Problem32.lhs  Problem34.lhs  Problem48.lhs  Util.hs
pythonchallenge.com/: 00.hs  00.lhs  01.hs  01.lhs  01.txt  02.hs  02.lhs  03.hs  03.lhs  03.txt  04.hs  04.lhs  index.html
roman/: roman.lhs
